syntax = "proto3";

package espikey;

service KVService {
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc Set(SetRequest) returns (SetResponse) {}
}

message GetRequest { bytes key = 1; }

message GetResponse { bytes value = 1; }

message SetRequest {
  bytes key = 1;
  bytes value = 2;
}

message SetResponse { int32 status = 1; }
